--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "5.12.3",
     "@mui/styles": "^5.13.2",
+    "@mui/x-date-pickers": "^6.19.7",
+    "@mui/x-date-pickers-pro": "^6.19.7",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "dayjs": "^1.11.10",
     "firebase": "^9.22.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
