--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@emotion/cache": "11.10.8",
-    "@emotion/react": "11.10.8",
-    "@emotion/styled": "11.10.8",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -23,7 +23,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "5.11.16",
     "@mui/lab": "^5.0.0-alpha.140",
-    "@mui/material": "5.12.3",
+    "@mui/material": "^5.12.3",
     "@mui/styles": "^5.13.2",
     "@mui/x-date-pickers": "^6.19.7",
     "@mui/x-date-pickers-pro": "^6.19.7",
