--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.10",
     "firebase": "^9.22.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.0",
