--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-dashboard-2-react",
-  "homepage": "https://chembizz-admin.onrender.com",
+  "homepage": "https://chembizz-admin.onrender.com/",
   "version": "2.2.0",
   "private": true,
   "author": "Creative Tim",
