--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@ckeditor/ckeditor5-build-classic": "^42.0.0",
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "@emotion/cache": "11.10.8",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
@@ -23,13 +25,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "5.11.16",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.12.3",
     "@mui/styles": "^5.13.2",
     "@mui/x-date-pickers": "^6.19.7",
     "@mui/x-date-pickers-pro": "^6.19.7",
-    "axios": "^1.4.0",
+    "ajv": "^8.16.0",
+    "ajv-keywords": "^5.1.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
@@ -84,5 +88,8 @@
   },
   "overrides": {
     "svgo": "3.0.2"
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
