--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-slice": "^0.3.1",
     "react-slick": "^0.29.0",
     "react-table": "7.8.0",
